--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-My Page
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+  </head>
+  <body>
+This is a main project page
+
+<a href="/tasks">Tasks</a> - contains info for developers which tasks are to be done next. Also contains history which tasks were done.
+<a href="/tips">Tips</a> - contains helpfull info for developers, e.g. brief list of git commands, main pitfalls, etc...
+  </body>
+</html>
+
