--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   </head>
   <body>
 This is a main project page
+<br><br>
 
-<a href="/tasks">Tasks</a> - contains info for developers which tasks are to be done next. Also contains history which tasks were done.
-<a href="/tips">Tips</a> - contains helpfull info for developers, e.g. brief list of git commands, main pitfalls, etc...
+<a href="tasks">Tasks</a> - contains info for developers which tasks are to be done next. Also contains history which tasks were done.<br>
+<a href="tips">Tips</a> - contains helpfull info for developers, e.g. brief list of git commands, main pitfalls, etc...<br>
   </body>
 </html>
 
